refactor: Accept a lot of IDE suggestions